5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1679_1102.log
== TEST (2019-04-30 13:15:54) 
-- CODE:
from math import*

H = float(input( "altura:"))
h = float(input("nivel do combustivel:"))
r = float(input("raio:")
print("Entradas:", H",",h",",r)

if (h < 0 or H < 0 or r < 0):
	vol = -1
elif(h < r)
	vol = (1./3) * pi * h**2 * (3 * r - h )
elif ( h < H - r):
		vol = (2./3) * pi * r**3 + pi * r**2 * (h - r)
elif (h <= H):
		vol = (4./3) * pi * r**3 + pi * r**2 * (H - 2 * r) - (1/3) * pi * (H - h)**2 * (3 * r - H + h)
else:
	vol = -1
			 
print(round(vol, 3))
-- ERROR:
File "XXXX", line 6
    print("Entradas:", H",",h",",r)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 13:15:56) 
-- CODE:
from math import*

H = float(input( "altura:"))
h = float(input("nivel do combustivel:"))
r = float(input("raio:")
print("Entradas:", H",",h",",r)

if (h < 0 or H < 0 or r < 0):
	vol = -1
elif(h < r)
	vol = (1./3) * pi * h**2 * (3 * r - h )
elif ( h < H - r):
		vol = (2./3) * pi * r**3 + pi * r**2 * (h - r)
elif (h <= H):
		vol = (4./3) * pi * r**3 + pi * r**2 * (H - 2 * r) - (1/3) * pi * (H - h)**2 * (3 * r - H + h)
else:
	vol = -1
			 
print(round(vol, 3))
-- EXECUTION TIME:
0.131878
-- ERROR:
  File "/home/codebench/codes/1679/1102/main.py", line 6
    print("Entradas:", H",",h",",r)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:15:57) 
-- CODE:
from math import*

H = float(input( "altura:"))
h = float(input("nivel do combustivel:"))
r = float(input("raio:")
print("Entradas:", H",",h",",r)

if (h < 0 or H < 0 or r < 0):
	vol = -1
elif(h < r)
	vol = (1./3) * pi * h**2 * (3 * r - h )
elif ( h < H - r):
		vol = (2./3) * pi * r**3 + pi * r**2 * (h - r)
elif (h <= H):
		vol = (4./3) * pi * r**3 + pi * r**2 * (H - 2 * r) - (1/3) * pi * (H - h)**2 * (3 * r - H + h)
else:
	vol = -1
			 
print(round(vol, 3))
-- ERROR:
File "XXXX", line 6
    print("Entradas:", H",",h",",r)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 13:16:30) 
-- CODE:
from math import*

H = float(input( "altura:"))
h = float(input("nivel do combustivel:"))
r = float(input("raio:")


if (h < 0 or H < 0 or r < 0):
	vol = -1
elif(h < r)
	vol = (1./3) * pi * h**2 * (3 * r - h )
elif ( h < H - r):
		vol = (2./3) * pi * r**3 + pi * r**2 * (h - r)
elif (h <= H):
		vol = (4./3) * pi * r**3 + pi * r**2 * (H - 2 * r) - (1/3) * pi * (H - h)**2 * (3 * r - H + h)
else:
	vol = -1
			 
print(round(vol, 3))
-- EXECUTION TIME:
0.146551
-- ERROR:
  File "/home/codebench/codes/1679/1102/main.py", line 8
    if (h < 0 or H < 0 or r < 0):
                                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:16:30) 
-- CODE:
from math import*

H = float(input( "altura:"))
h = float(input("nivel do combustivel:"))
r = float(input("raio:")


if (h < 0 or H < 0 or r < 0):
	vol = -1
elif(h < r)
	vol = (1./3) * pi * h**2 * (3 * r - h )
elif ( h < H - r):
		vol = (2./3) * pi * r**3 + pi * r**2 * (h - r)
elif (h <= H):
		vol = (4./3) * pi * r**3 + pi * r**2 * (H - 2 * r) - (1/3) * pi * (H - h)**2 * (3 * r - H + h)
else:
	vol = -1
			 
print(round(vol, 3))
-- ERROR:
File "XXXX", line 8
    if (h < 0 or H < 0 or r < 0):
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:16:31) 
-- CODE:
from math import*

H = float(input( "altura:"))
h = float(input("nivel do combustivel:"))
r = float(input("raio:")


if (h < 0 or H < 0 or r < 0):
	vol = -1
elif(h < r)
	vol = (1./3) * pi * h**2 * (3 * r - h )
elif ( h < H - r):
		vol = (2./3) * pi * r**3 + pi * r**2 * (h - r)
elif (h <= H):
		vol = (4./3) * pi * r**3 + pi * r**2 * (H - 2 * r) - (1/3) * pi * (H - h)**2 * (3 * r - H + h)
else:
	vol = -1
			 
print(round(vol, 3))
-- ERROR:
File "XXXX", line 8
    if (h < 0 or H < 0 or r < 0):
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 13:16:32) 
-- CODE:
from math import*

H = float(input( "altura:"))
h = float(input("nivel do combustivel:"))
r = float(input("raio:")


if (h < 0 or H < 0 or r < 0):
	vol = -1
elif(h < r)
	vol = (1./3) * pi * h**2 * (3 * r - h )
elif ( h < H - r):
		vol = (2./3) * pi * r**3 + pi * r**2 * (h - r)
elif (h <= H):
		vol = (4./3) * pi * r**3 + pi * r**2 * (H - 2 * r) - (1/3) * pi * (H - h)**2 * (3 * r - H + h)
else:
	vol = -1
			 
print(round(vol, 3))
-- EXECUTION TIME:
0.135326
-- ERROR:
  File "/home/codebench/codes/1679/1102/main.py", line 8
    if (h < 0 or H < 0 or r < 0):
                                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:36:35) 
-- CODE:
from math import*

H = float(input( "altura:"))
h = float(input("nivel do combustivel:"))
r = float(input("raio:")


if (h < 0 or H < 0 or r < 0):
	vol = -1
elif(h < r)
	vol = (1./3) * pi * h**2 * (3 * r - h )
elif ( h < H - r):
		vol = (2./3) * pi * r**3 + pi * r**2 * (h - r)
elif (h <= H):
		vol = (4./3) * pi * r**3 + pi * r**2 * (H - 2 * r) - (1/3) * pi * (H - h)**2 * (3 * r - H + h)
else:
	vol = -1
			 
print(round(vol, 3))
-- ERROR:
File "XXXX", line 8
    if (h < 0 or H < 0 or r < 0):
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:38:02) 
-- CODE:
from math import*

H = float(input( "altura:"))
h = float(input("nivel do combustivel:"))
r = float(input("raio:")


if (h < 0 or H < 0 or r < 0):
	vol = -1
elif(h < r)
	vol = (1./3) * pi * h**2 * (3 * r - h )
elif ( h < H - r):
		vol = (2./3) * pi * r**3 + pi * r**2 * (h - r)
elif (h <= H):
		vol = (4./3) * pi * r**3 + pi * r**2 * (H - 2 * r) - (1/3) * pi * (H - h)**2 * (3 * r - H + h)
else:
	vol = -1
			 
print(round(vol, 3))
-- ERROR:
File "XXXX", line 8
    if (h < 0 or H < 0 or r < 0):
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 12:38:02) 
-- CODE:
from math import*

H = float(input( "altura:"))
h = float(input("nivel do combustivel:"))
r = float(input("raio:")


if (h < 0 or H < 0 or r < 0):
	vol = -1
elif(h < r)
	vol = (1./3) * pi * h**2 * (3 * r - h )
elif ( h < H - r):
		vol = (2./3) * pi * r**3 + pi * r**2 * (h - r)
elif (h <= H):
		vol = (4./3) * pi * r**3 + pi * r**2 * (H - 2 * r) - (1/3) * pi * (H - h)**2 * (3 * r - H + h)
else:
	vol = -1
			 
print(round(vol, 3))
-- EXECUTION TIME:
0.298501
-- ERROR:
  File "/home/codebench/codes/1679/1102/main.py", line 8
    if (h < 0 or H < 0 or r < 0):
                                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:38:02) 
-- CODE:
from math import*

H = float(input( "altura:"))
h = float(input("nivel do combustivel:"))
r = float(input("raio:")


if (h < 0 or H < 0 or r < 0):
	vol = -1
elif(h < r)
	vol = (1./3) * pi * h**2 * (3 * r - h )
elif ( h < H - r):
		vol = (2./3) * pi * r**3 + pi * r**2 * (h - r)
elif (h <= H):
		vol = (4./3) * pi * r**3 + pi * r**2 * (H - 2 * r) - (1/3) * pi * (H - h)**2 * (3 * r - H + h)
else:
	vol = -1
			 
print(round(vol, 3))
-- ERROR:
File "XXXX", line 8
    if (h < 0 or H < 0 or r < 0):
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 12:38:02) 
-- CODE:
from math import*

H = float(input( "altura:"))
h = float(input("nivel do combustivel:"))
r = float(input("raio:")


if (h < 0 or H < 0 or r < 0):
	vol = -1
elif(h < r)
	vol = (1./3) * pi * h**2 * (3 * r - h )
elif ( h < H - r):
		vol = (2./3) * pi * r**3 + pi * r**2 * (h - r)
elif (h <= H):
		vol = (4./3) * pi * r**3 + pi * r**2 * (H - 2 * r) - (1/3) * pi * (H - h)**2 * (3 * r - H + h)
else:
	vol = -1
			 
print(round(vol, 3))
-- EXECUTION TIME:
0.127003
-- ERROR:
  File "/home/codebench/codes/1679/1102/main.py", line 8
    if (h < 0 or H < 0 or r < 0):
                                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:38:06) 
-- CODE:
from math import*

H = float(input( "altura:"))
h = float(input("nivel do combustivel:"))
r = float(input("raio:")


if (h < 0 or H < 0 or r < 0):
	vol = -1
elif(h < r)
	vol = (1./3) * pi * h**2 * (3 * r - h )
elif ( h < H - r):
		vol = (2./3) * pi * r**3 + pi * r**2 * (h - r)
elif (h <= H):
		vol = (4./3) * pi * r**3 + pi * r**2 * (H - 2 * r) - (1/3) * pi * (H - h)**2 * (3 * r - H + h)
else:
	vol = -1
			 
print(round(vol, 3))
-- ERROR:
File "XXXX", line 8
    if (h < 0 or H < 0 or r < 0):
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:00:34) 
-- CODE:
from math import*

H = float(input( "altura:"))
h = float(input("nivel do combustivel:"))
r = float(input("raio:")


if (h < 0 or H < 0 or r < 0):
	vol = -1
elif(h < r)
	vol = (1./3) * pi * h**2 * (3 * r - h )
elif ( h < H - r):
		vol = (2./3) * pi * r**3 + pi * r**2 * (h - r)
elif (h <= H):
		vol = (4./3) * pi * r**3 + pi * r**2 * (H - 2 * r) - (1/3) * pi * (H - h)**2 * (3 * r - H + h)
else:
	vol = -1
			 
print(round(vol, 3))
-- ERROR:
File "XXXX", line 8
    if (h < 0 or H < 0 or r < 0):
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:01:39) 
-- CODE:
from math import*

H = float(input( "altura:"))
h = float(input("nivel do combustivel:"))
r = float(input("raio:")


if (h < 0 or H < 0 or r < 0 and H > h and  H > 2*r):
	vol = -1
elif(h < r)
	vol = (1./3) * pi * h**2 * (3 * r - h )
elif ( h < H - r):
		vol = (2./3) * pi * r**3 + pi * r**2 * (h - r)
elif (h <= H):
		vol = (4./3) * pi * r**3 + pi * r**2 * (H - 2 * r) - (1/3) * pi * (H - h)**2 * (3 * r - H + h)
else:
	vol = -1
			 
print(round(vol, 3))
-- ERROR:
File "XXXX", line 8
    if (h < 0 or H < 0 or r < 0 and H > h and  H > 2*r):
                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:01:41) 
-- CODE:
from math import*

H = float(input( "altura:"))
h = float(input("nivel do combustivel:"))
r = float(input("raio:")


if (h < 0 or H < 0 or r < 0 and H > h and  H > 2*r):
	vol = -1
elif(h < r)
	vol = (1./3) * pi * h**2 * (3 * r - h )
elif ( h < H - r):
		vol = (2./3) * pi * r**3 + pi * r**2 * (h - r)
elif (h <= H):
		vol = (4./3) * pi * r**3 + pi * r**2 * (H - 2 * r) - (1/3) * pi * (H - h)**2 * (3 * r - H + h)
else:
	vol = -1
			 
print(round(vol, 3))
-- ERROR:
File "XXXX", line 8
    if (h < 0 or H < 0 or r < 0 and H > h and  H > 2*r):
                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:02:07) 
-- CODE:
from math import*

H = float(input( "altura:"))
h = float(input("nivel do combustivel:"))
r = float(input("raio:")


if ((h < 0 or H < 0 or r < 0) and (H > h and  H > 2*r)):
	vol = -1
elif(h < r)
	vol = (1./3) * pi * h**2 * (3 * r - h )
elif ( h < H - r):
		vol = (2./3) * pi * r**3 + pi * r**2 * (h - r)
elif (h <= H):
		vol = (4./3) * pi * r**3 + pi * r**2 * (H - 2 * r) - (1/3) * pi * (H - h)**2 * (3 * r - H + h)
else:
	vol = -1
			 
print(round(vol, 3))
-- EXECUTION TIME:
0.208024
-- ERROR:
  File "/home/codebench/codes/1679/1102/main.py", line 8
    if ((h < 0 or H < 0 or r < 0) and (H > h and  H > 2*r)):
                                                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:02:12) 
-- CODE:
from math import*

H = float(input( "altura:"))
h = float(input("nivel do combustivel:"))
r = float(input("raio:")


if ((h < 0 or H < 0 or r < 0) and (H > h and  H > 2*r)):
	vol = -1
elif(h < r)
	vol = (1./3) * pi * h**2 * (3 * r - h )
elif ( h < H - r):
		vol = (2./3) * pi * r**3 + pi * r**2 * (h - r)
elif (h <= H):
		vol = (4./3) * pi * r**3 + pi * r**2 * (H - 2 * r) - (1/3) * pi * (H - h)**2 * (3 * r - H + h)
else:
	vol = -1
			 
print(round(vol, 3))
-- ERROR:
File "XXXX", line 8
    if ((h < 0 or H < 0 or r < 0) and (H > h and  H > 2*r)):
                                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:03:36) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
H=float(input("altura do tanque: "))
c=float(input("nivel do combustivel: "))
r=float(input("raio semiesferico: "))
print("Entradas:",H,",",c,",",r)
from math import *
if(H>0 and c>0 and r>0)and(H>c and H>(2*r)):
	V=(4/3)*pi*(r**3)
	if(c<=r):
		if(c==r):
			v=(V/2)*1000
			print("Volume:",round(v,3),"litros")
		elif(c<r):
			v=((pi/3)*(c**2)*(3*r-c))*1000
			print("Volume:",round(v,3),"litros")
	elif(c>r and c<=H-r):
		v=V/2
		C=pi*(r**2)*(c-r)
		V1=(v+C)*1000
		print("Volume:",round(V1,3),"litros")
	elif(c>H-r):
		C=pi*(r**2)*(c-r)
		vc=(pi/3)*((H-c)**2)*(3*r-(H-c))
		V1=((V/2)+C-vc)*1000
		print("Volume:",round(V1,3),"litros")
elif(H<0 or c<0 or r<0) or (H<c or c<2*r):
	print("Entradas invalidas")
			
-- EXECUTION TIME:
0.224194
-- TEST CASE 1:
---- input:
11.3
5.7
2.3
---- correct output:
Entradas: 11.3 , 5.7 , 2.3
Volume: 81987.191 litros
---- user output:
Entradas: 11.3 , 5.7 , 2.3
Volume: 81987.191 litros
-- TEST CASE 2:
---- input:
8.5
9.5
2.2
---- correct output:
Entradas: 8.5 , 9.5 , 2.2
Entradas invalidas
---- user output:
Entradas: 8.5 , 9.5 , 2.2
Entradas invalidas
-- TEST CASE 3:
---- input:
8
4
6
---- correct output:
Entradas: 8.0 , 4.0 , 6.0
Entradas invalidas
---- user output:
Entradas: 8.0 , 4.0 , 6.0
Entradas invalidas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
